	PR optimization/13060 	* function.c (fixup_var_refs_1) [SUBREG]: Recognize even if a 	replacement already exists.  Fix again the whole insn if that fails.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@74386 138bc75d-0d04-0410-961f-82ee72b054a4